test_regress/t/t_flag_wpedantic_bad.out
%Error: t/t_flag_wpedantic_bad.v:8:14: syntax error, unexpected global, expecting IDENTIFIER or '=' or do or final
    8 |    reg global;
      |              ^
%Error: Exiting due to
